fix unclickable bottom url bar overlap issue

--- a/userChrome.css
+++ b/userChrome.css
@@ -3,13 +3,13 @@
 	--tab-inactive-bg-color: #908caa;
 	--tab-active-fg-fallback-color: #e0def4;		/* color of text in an active tab without a container */
 	--tab-inactive-fg-fallback-color: #393552;		/* color of text in an inactive tab without a container */
-    --tab-hover-bg-color: #393552;
+    --tab-hover-bg-color: #56526e;
 	--urlbar-focused-bg-color: #eee;
 	--urlbar-not-focused-bg-color: #eee;
     --sidebar-bg-color: #222;
 	--toolbar-bgcolor: #222 !important;
-	--tab-font: 'BlexMono Nerd Font';
-	--urlbar-font: 'BlexMono Nerd Font';
+	--tab-font: 'IBM Plex Mono';
+	--urlbar-font: 'IBM Plex Mono';
 
 	/* try increasing if you encounter problems */
 	--urlbar-height-setting: 20px;
@@ -232,6 +232,7 @@ tab {
 /* Tab: hovered colors */
 #tabbrowser-tabs .tabbrowser-tab:hover:not([selected]) .tab-content {
 	background: var(--tab-hover-bg-color) !important;
+    color: var(--tab-active-fg-fallback-color) !important;
 }
 
 /* hide window controls */
@@ -391,28 +392,15 @@ tab {
 }
 
 /* numbering tabs */
-#tabbrowser-tabs {
-  counter-reset: tab-counter;
-}
-
-.tabbrowser-tab {
-  counter-increment: tab-counter;
-}
-
-/* place number before tab title */
-.tabbrowser-tab .tab-label::before {
-  content: counter(tab-counter);
-  margin-right: 6px;              /* space between number and title */
-
-  border-radius: 2px;
-  padding: 2px;
-
-  color: #000;
-  background-color: #f6c177;
-
-  font-weight: 800;
-  font-size: 14px;
-  line-height: 1;
+#tabbrowser-tabs { counter-reset: tab-counter; }
+.tabbrowser-tab { counter-increment: tab-counter; }
+.tabbrowser-tab .tab-content { padding-left: 0 !important; }
+.tabbrowser-tab .tab-content::before {
+	content: counter(tab-counter);
+	margin-right: 0.4em;
+	padding: var(--tab-min-height) 0.4em;
+	color: #000;
+	background-color: #f6c177;
 }
 
 /* Remove extra bottom spacing from tab groups */
@@ -440,8 +428,8 @@ tab {
   bottom: 0 !important;
   left: 0 !important;
   right: 0 !important;
-  z-index: 1000 !important;
-  background: transparent !important;
+  /*z-index: 1000 !important;*/
+  background: #000 !important;
 }
 
 /* Inside toolbox: URL bar above tabs */
@@ -456,10 +444,8 @@ tab {
 /* urlbar open upward */
 #urlbar[open] > .urlbarView {
   background-color: var(--urlbar-focused-bg-color) !important;
-  /*border: 1px solid #000 !important;*/
   backdrop-filter: none !important;
   position: absolute !important;
   bottom: 100% !important;
   top: auto !important;
-  /*margin-bottom: 2px !important;*/
 }
